added functionality to project folder, started experimenting with neon navigator

--- a/src/content/projects/neon-navigator.mdx
+++ b/src/content/projects/neon-navigator.mdx
@@ -5,6 +5,7 @@ year: 2023
 stack: ["Unity","C#"]
 summary: "Cursor-aimed laser shooter with energy economy and level pacing."
 thumb: "/images/neon-navigator.jpg"
+video: "/videos/neon-navigator-demo.mp4"
 order: 1
 ---
 
