tried fixing deployment issues

--- a/src/content/projects/neon-navigator.mdx
+++ b/src/content/projects/neon-navigator.mdx
@@ -21,8 +21,7 @@ Designed level flow and encounter pacing. Implemented laser fire with energy con
 - ScriptableObjects for tunables  
 - Simple state machine for player actions
 
-<!-- Optional later:
+{/* Optional later:
 <iframe src="/demos/neon-navigator/" width="100%" height="640" loading="lazy" />
--->
-
+*/}
 
